# atomic-lru

./: .gitignore  .importlinter  AGENTS.md  Makefile  README.md  README.md.template  mkdocs.yml  mkdocs_main.py  pyproject.toml  ruff.toml  set-version.py  ty.toml
.cursor/: mcp.json
.cursor/commands/: backlog-implement-next-task.md  backlog-plan-next-task.md  find-issues-to-fix-or-improve.md
.cursor/rules/: backlog-md.mdc
.github/workflows/: ci.yml
atomic_lru/: __init__.py  _cache.py
atomic_lru/_storage/: storage.py  thread.py  types.py  value.py
backlog/: config.yml
backlog/tasks/: task-1 - Bug-`set`-does-not-update-LRU-position-when-overwriting-an-existing-key.md  task-2 - Improvement-Add-input-validation-for-`max_items`-`default_ttl`-and-`expiration_thread_delay`-in-Storage.md  task-3 - Typos-Multiple-spelling-errors-across-codebase.md  task-4 - Documentation-Footnote-about-size-limit-feature-is-inaccurate.md  task-5 - Inconsistency-Import-linter-contract-name-`agents_embeddings`-is-a-copy-paste-artifact.md  task-6 - Improvement-`set-version.py`-drops-trailing-newline-when-updating-version-files.md  task-7 - Improvement-Several-tests-dont-call-`close`-on-Cache-Storage-objects.md  task-8 - Bug-Misleading-error-message-for-`size_limit_in_bytes`-validation.md
doc/: highlevel.py  lowlevel.py  ruff.toml
docs/: index.md
docs/_includes/: features.md  footnotes.md  what_is_this.md
docs/explanation/: index.md
docs/reference/: api.md  dev.md
docs/tutorials/: highlevel.py  lowlevel.py  quickstart.md  ruff.toml
tests/: test_cache.py  test_storage.py
(+12 files in other folders)
