[project]
name = "atomic_lru"
version = "0.0.1"
description = "Thread safe in-memory LRU cache (with TTL)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[tool.uv]
required-version = ">=0.9.0"

[dependency-groups]
dev = [
    "jinja-tree>=0.7.4",
    "lz4>=4.4.5",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "ty>=0.0.7",
    "import-linter>=2.3",
]
